--- a/test.html
+++ b/test.html
@@ -3,7 +3,7 @@
 		<title>testing require-once.js</title>
 	</head>
 	<body>
-		<script src="require-once.js"></script>
+		<script src="require-once.min.js"></script>
 		<script>
 			requireOnce(["https://unpkg.com/do-async@latest"], function (doAsync){
 				console.log(doAsync);
