--- a/test.html
+++ b/test.html
@@ -3,11 +3,12 @@
 		<title>testing require-once.js</title>
 	</head>
 	<body>
-		<script src="require-once.min.js"></script>
+		<script src="require_once.js"></script>
+		<script src="test.js"></script>
 		<script>
-			requireOnce(["https://unpkg.com/do-async@latest", "/extra-require.js"], function (doAsync){
+			/*requireOnce(["https://unpkg.com/do-async@latest", "/extra-require.js"], function (doAsync){
 				console.log(doAsync);
-			})
+			})*/
 		</script>
 	</body>
 </html>
