--- a/test.html
+++ b/test.html
@@ -3,7 +3,7 @@
 		<title>testing require-once.js</title>
 	</head>
 	<body>
-		<script src="require_once.js"></script>
+		<script src="require_once.min.js"></script>
 		<script src="test.js"></script>
 		<script>
 			/*requireOnce(["https://unpkg.com/do-async@latest", "/extra-require.js"], function (doAsync){
