fixed bug and things will now load in normal order

--- a/test.html
+++ b/test.html
@@ -9,6 +9,6 @@
 	</head>
 	<body>
 		<script src="require_once.js"></script>
-		<script src="test.js"></script>
+		<script src="extra-require.js"></script>
 	</body>
 </html>
