manual compression for more space savings

--- a/test.html
+++ b/test.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>testing require-once.js</title>
+		<title>testing require-once.min.js</title>
 		<script>
             /*document.addEventListener('readystatechange', function(ev){
                 console.log("ready state changed", document.readystate)
