--- a/test.html
+++ b/test.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>testing require-once.js</title>
+		<title>testing require-once.min.js</title>
 		<script>
             /*document.addEventListener('readystatechange', function(ev){
                 console.log("ready state changed", document.readystate)
@@ -8,7 +8,7 @@
 		</script>
 	</head>
 	<body>
-		<script src="require_once.js"></script>
+		<script src="require_once.min.js"></script>
 		<script src="extra-require.js"></script>
 	</body>
 </html>
