--- a/test.html
+++ b/test.html
@@ -8,7 +8,7 @@
 		</script>
 	</head>
 	<body>
-		<script src="require_once.min.js"></script>
+		<script src="require_once.js"></script>
 		<script src="extra-require.js"></script>
 	</body>
 </html>
