--- a/test.html
+++ b/test.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 	<head>
 		<title>testing require-once.min.js</title>
@@ -10,5 +11,6 @@
 	<body>
 		<script src="require_once.js"></script>
 		<script src="extra-require.js"></script>
+		<!--<script src="test.js"></script>-->
 	</body>
 </html>
