make scripts load on call and make callbacks resolve on doc ready

--- a/test.html
+++ b/test.html
@@ -11,6 +11,7 @@
 	<body>
 		<script src="require_once.js"></script>
 		<script src="extra-require.js"></script>
+		<img width="100%" src="https://upload.wikimedia.org/wikipedia/commons/8/8a/Cat_eyes_2007-2.jpg">
 		<!--<script src="test.js"></script>-->
 	</body>
 </html>
