added test files to figure out what the heck is going on

--- a/test.html
+++ b/test.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>testing require-once.min.js</title>
+		<title>testing require-once.js</title>
 		<script>
             /*document.addEventListener('readystatechange', function(ev){
                 console.log("ready state changed", document.readystate)
@@ -10,7 +10,8 @@
 	</head>
 	<body>
 		<script src="require_once.min.js"></script>
-		<script src="extra-require.js"></script>
+		<!-- <script src="extra-require.js"></script> -->
+        <script src="order/1.js"></script>
 		<img width="100%" src="https://upload.wikimedia.org/wikipedia/commons/8/8a/Cat_eyes_2007-2.jpg">
 		<!--<script src="test.js"></script>-->
 	</body>
