--- a/test.html
+++ b/test.html
@@ -9,7 +9,6 @@
 		</script>
 	</head>
 	<body>
-		<script src="require_once.js"></script>
 		<script>
 			"Use Strict"
 			var a = 5
@@ -32,6 +31,8 @@
 				}
 			)
 		</script>
+		<script src="require_once.min.js"></script>
+		<!-- <script src="https://unpkg.com/require_once@0.2.4"></script> -->
 		<!-- <script src="extra-require.js"></script> -->
         <script src="order/1.js"></script>
 		<img width="100%" src="https://upload.wikimedia.org/wikipedia/commons/8/8a/Cat_eyes_2007-2.jpg">
