--- a/test.html
+++ b/test.html
@@ -31,7 +31,7 @@
 				}
 			)
 		</script>
-		<script src="require_once.min.js"></script>
+		<script src="require_once.js"></script>
 		<!-- <script src="https://unpkg.com/require_once@0.2.4"></script> -->
 		<!-- <script src="extra-require.js"></script> -->
         <script src="order/1.js"></script>
