compressed code again

--- a/test.html
+++ b/test.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<script src="require_once.js"></script>
+		<script src="require_once.min.js"></script>
 		<title>testing require-once.js</title>
 	</head>
 	<body>
